--- a/form_idea.html
+++ b/form_idea.html
@@ -100,7 +100,7 @@
                     </a>
                     <ul class="collapse list-unstyled pl-4 w-100" id="ui-elements">
                         <li class="nav-item">
-                            <a class="nav-link pl-3" href="centro_ideas.html"><span class="ml-1 item-text">Menu</span>
+                            <a class="nav-link pl-3" href="index.html"><span class="ml-1 item-text">Menu</span>
                             </a>
                         </li>
                         <li class="nav-item">
