Cambio de links y stylos

--- a/form_idea.html
+++ b/form_idea.html
@@ -256,7 +256,7 @@
 
                 </div> <!-- .col-12 -->
                 <div class="col-12 text-center">
-                    <img src="assets/images/Recurso 11 (2).png">
+                    <img style="width: 40%" src="assets/images/Recurso 11 (2).png">
                 </div>
             </div> <!-- .row -->
         </div> <!-- .container-fluid -->
