Cambio de primer nav en todas las plantillas

--- a/form_kaizen.html
+++ b/form_kaizen.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="assets/images/Grammer_Logo.ico">
     <title>Kaizen System</title>
     <!-- Simple bar CSS -->
     <link rel="stylesheet" href="css/simplebar.css">
@@ -165,33 +165,12 @@
                                         <label for="simpleinput">Nombre de tu idea</label>
                                         <input type="text" id="simpleinput" class="form-control">
                                     </div>
-                                    <div class="form-group mb-3">
-                                        <label for="example-email">Area</label>
-                                        <input type="text" id="example-email" name="example-email" class="form-control"
-                                               placeholder="">
-                                    </div>
                                 </div>
 
                                 <div class="col-md-6">
                                     <div class="form-group mb-3">
-                                        <label for="simpleinput">Departamento</label>
-                                        <select class="form-control" id="example-select">
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-                                            <option>5</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group mb-3">
                                         <label for="example-email">Desperdicio</label>
-                                        <select class="form-control" id="example-select">
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-                                            <option>5</option>
-                                        </select>
+                                        <input type="text" id="simpleinput" class="form-control">
                                     </div>
                                 </div>
 
@@ -259,9 +238,19 @@
                                         <input type="text" class="form-control mb-2 mr-sm-2" id="nombreInput" placeholder="Nombre">
                                         <select class="custom-select mb-2 mr-sm-2" id="areaSelect">
                                             <option selected>Area...</option>
-                                            <option value="1">Calidad</option>
-                                            <option value="2">Logistica</option>
-                                            <option value="3">Produccion</option>
+                                            <option value="APU1">APU 1</option>
+                                            <option value="APU2">APU 2</option>
+                                            <option value="APU3">APU 3</option>
+                                            <option value="CALIDAD">CALIDAD</option>
+                                            <option value="LOGISTICA">LOGISTICA</option>
+                                            <option value="INGENIERIA">INGENIERIA</option>
+                                            <option value="MANTENIMIENTO">MANTENIMIENTO</option>
+                                            <option value="RH">RH</option>
+                                            <option value="CONTROLLING">CONTROLLING</option>
+                                            <option value="EHS">EHS</option>
+                                            <option value="GPS">GPS</option>
+                                            <option value="COMPRAS">COMPRAS</option>
+                                            <option value="FINANZAS">FINANZAS</option>
                                         </select>
                                         <button type="submit" class="btn btn-primary mb-2">Agregar</button>
                                     </form>
