--- a/form_best_practice.html
+++ b/form_best_practice.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="assets/images/Grammer_Logo.ico">
     <title>Kaizen System</title>
     <!-- Simple bar CSS -->
     <link rel="stylesheet" href="css/simplebar.css">
@@ -165,33 +165,12 @@
                                         <label for="simpleinput">Nombre de tu idea</label>
                                         <input type="text" id="simpleinput" class="form-control">
                                     </div>
-                                    <div class="form-group mb-3">
-                                        <label for="example-email">Area</label>
-                                        <input type="text" id="example-email" name="example-email" class="form-control"
-                                               placeholder="">
-                                    </div>
                                 </div>
 
                                 <div class="col-md-6">
                                     <div class="form-group mb-3">
-                                        <label for="simpleinput">Departamento</label>
-                                        <select class="form-control" id="example-select">
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-                                            <option>5</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group mb-3">
                                         <label for="example-email">Desperdicio</label>
-                                        <select class="form-control" id="example-select">
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-                                            <option>5</option>
-                                        </select>
+                                        <input type="text" id="simpleinput" class="form-control">
                                     </div>
                                 </div>
 
@@ -252,15 +231,26 @@
                                 </div> <!-- /.col -->
 
                                 <div class="col-md-12">
-                                    <label for="example-email">Participantes</label>
+                                    <hr>
+                                    <label for="example-email" class="mt-3">Participantes</label>
                                     <form class="form-inline" id="participantForm">
                                         <input type="text" class="form-control mb-2 mr-sm-2" id="nominaInput" placeholder="Nomina">
                                         <input type="text" class="form-control mb-2 mr-sm-2" id="nombreInput" placeholder="Nombre">
                                         <select class="custom-select mb-2 mr-sm-2" id="areaSelect">
                                             <option selected>Area...</option>
-                                            <option value="1">Calidad</option>
-                                            <option value="2">Logistica</option>
-                                            <option value="3">Produccion</option>
+                                            <option value="APU1">APU 1</option>
+                                            <option value="APU2">APU 2</option>
+                                            <option value="APU3">APU 3</option>
+                                            <option value="CALIDAD">CALIDAD</option>
+                                            <option value="LOGISTICA">LOGISTICA</option>
+                                            <option value="INGENIERIA">INGENIERIA</option>
+                                            <option value="MANTENIMIENTO">MANTENIMIENTO</option>
+                                            <option value="RH">RH</option>
+                                            <option value="CONTROLLING">CONTROLLING</option>
+                                            <option value="EHS">EHS</option>
+                                            <option value="GPS">GPS</option>
+                                            <option value="COMPRAS">COMPRAS</option>
+                                            <option value="FINANZAS">FINANZAS</option>
                                         </select>
                                         <input type="text" class="form-control mb-2 mr-sm-2" id="rolInput" placeholder="Rol en el equipo">
                                         <button type="submit" class="btn btn-primary mb-2">Agregar</button>
@@ -286,7 +276,8 @@
                                 </div>
 
                                 <div class="col-md-12">
-                                    <label for="example-email">Diagrama de actividades</label>
+                                    <hr>
+                                    <label for="example-email" class="mt-3">Diagrama de actividades</label>
                                     <form class="form-inline" id="actividadesForm">
                                         <label class="mb-2 mr-sm-2">Seleccione participante</label>
                                         <select class="custom-select mb-2 mr-sm-2" id="participantesSelect">
@@ -317,6 +308,151 @@
                                         </tr>
                                         </thead>
                                         <tbody>
+
+                                        </tbody>
+                                    </table>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <hr>
+                                    <label for="example-email" class="mt-3">KPI</label>
+                                    <form class="form-inline" id="actividadesForm">
+
+                                        <label class="mb-2 mr-sm-2">Nombre del KPI</label>
+                                        <input type="text" class="form-control mb-2 mr-sm-2" id="actividadInput" placeholder="">
+
+                                        <label class="mb-2 mr-sm-2">Antes</label>
+                                        <input type="text" class="form-control mb-2 mr-sm-2" id="actividadInput" placeholder="">
+
+                                        <label class="mb-2 mr-sm-2">Ahora</label>
+                                        <input type="text" class="form-control mb-2 mr-sm-2" id="actividadInput" placeholder="">
+
+                                        <button type="submit" class="btn btn-primary mb-2">Agregar</button>
+                                    </form>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <table class="table table-bordered table-hover mb-0" id="diagramaTable">
+                                        <thead>
+                                        <tr>
+                                            <th>KPI</th>
+                                            <th>Antes</th>
+                                            <th>Ahora</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+
+                                        </tbody>
+                                    </table>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <hr>
+                                    <label for="example-email" class="mt-3">Analisis de riesgos</label>
+                                    <table class="table table-bordered table-hover mb-0" id="diagramaTable">
+                                        <thead>
+                                        <tr>
+                                            <th>Tipo de Riesgo</th>
+                                            <th>Estado</th>
+                                            <th>Descripcion</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td>Timing | Timing</td>
+                                            <td>
+                                                <select class="custom-select mb-2 mr-sm-2" id="areaSelect">
+                                                    <option value="BAJO">BAJO</option>
+                                                    <option value="MEDIO">MEDIO</option>
+                                                    <option value="ALTO">ALTO</option>
+                                                </select>
+                                            </td>
+                                            <td><input type="text" class="form-control mb-2 mr-sm-2" id="" placeholder=""></td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>Budget | Budget</td>
+                                            <td>
+                                                <select class="custom-select mb-2 mr-sm-2" id="areaSelect">
+                                                    <option value="BAJO">BAJO</option>
+                                                    <option value="MEDIO">MEDIO</option>
+                                                    <option value="ALTO">ALTO</option>
+                                                </select>
+                                            </td>
+                                            <td><input type="text" class="form-control mb-2 mr-sm-2" id="" placeholder=""></td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>Complexity | Complexity</td>
+                                            <td>
+                                                <select class="custom-select mb-2 mr-sm-2" id="areaSelect">
+                                                    <option value="BAJO">BAJO</option>
+                                                    <option value="MEDIO">MEDIO</option>
+                                                    <option value="ALTO">ALTO</option>
+                                                </select>
+                                            </td>
+                                            <td><input type="text" class="form-control mb-2 mr-sm-2" id="" placeholder=""></td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>Resources | Resources</td>
+                                            <td>
+                                                <select class="custom-select mb-2 mr-sm-2" id="areaSelect">
+                                                    <option value="BAJO">BAJO</option>
+                                                    <option value="MEDIO">MEDIO</option>
+                                                    <option value="ALTO">ALTO</option>
+                                                </select>
+                                            </td>
+                                            <td><input type="text" class="form-control mb-2 mr-sm-2" id="" placeholder=""></td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>Supplier | Supplier</td>
+                                            <td>
+                                                <select class="custom-select mb-2 mr-sm-2" id="areaSelect">
+                                                    <option value="BAJO">BAJO</option>
+                                                    <option value="MEDIO">MEDIO</option>
+                                                    <option value="ALTO">ALTO</option>
+                                                </select>
+                                            </td>
+                                            <td><input type="text" class="form-control mb-2 mr-sm-2" id="" placeholder=""></td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>Quality | Quality </td>
+                                            <td>
+                                                <select class="custom-select mb-2 mr-sm-2" id="areaSelect">
+                                                    <option value="BAJO">BAJO</option>
+                                                    <option value="MEDIO">MEDIO</option>
+                                                    <option value="ALTO">ALTO</option>
+                                                </select>
+                                            </td>
+                                            <td><input type="text" class="form-control mb-2 mr-sm-2" id="" placeholder=""></td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>Action  | Action</td>
+                                            <td>
+                                                <select class="custom-select mb-2 mr-sm-2" id="areaSelect">
+                                                    <option value="BAJO">BAJO</option>
+                                                    <option value="MEDIO">MEDIO</option>
+                                                    <option value="ALTO">ALTO</option>
+                                                </select>
+                                            </td>
+                                            <td><input type="text" class="form-control mb-2 mr-sm-2" id="" placeholder=""></td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>Validation  | Validation </td>
+                                            <td>
+                                                <select class="custom-select mb-2 mr-sm-2" id="areaSelect">
+                                                    <option value="BAJO">BAJO</option>
+                                                    <option value="MEDIO">MEDIO</option>
+                                                    <option value="ALTO">ALTO</option>
+                                                </select>
+                                            </td>
+                                            <td><input type="text" class="form-control mb-2 mr-sm-2" id="" placeholder=""></td>
+                                        </tr>
 
                                         </tbody>
                                     </table>
